Configured production deployment for SmartHire